--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -21,10 +21,10 @@ jobs:
         export BAZEL_PACKAGE_URL="https://github.com/bazelbuild/bazel/releases/download/$BAZEL_PACKAGE_VERSION/$BAZEL_PACKAGE_FILE"
         sudo apt-get -y update && \
             curl -L --output "$BAZEL_PACKAGE_FILE" "$BAZEL_PACKAGE_URL" && \
-            apt-get install -y "./$BAZEL_PACKAGE_FILE" && \
+            sudo apt-get install -y "./$BAZEL_PACKAGE_FILE" && \
             rm "$BAZEL_PACKAGE_FILE" && \
-            apt-get -y clean && \
-            apt-get -y autoremove
+            sudo apt-get -y clean && \
+            sudo apt-get -y autoremove
 
     - name: Test
       run: |
