--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -28,5 +28,5 @@ jobs:
 
     - name: Test
       run: |
-        bazel test //...
+        bazel test //javacontainer/test/...
       working-directory: ./exaudfclient/base
