--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/Dockerfile
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/security_scan/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN mkdir -p /build_info/packages
 COPY security_scan/packages /build_info/packages/security_scan
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/security_scan/apt_get_packages_trivy_deps
-RUN wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | apt-key add - && \
+RUN curl -s https://aquasecurity.github.io/trivy-repo/deb/public.key | apt-key add - && \
    /scripts/install_scripts/install_ppa.pl --ppa 'deb https://aquasecurity.github.io/trivy-repo/deb bionic main' --out-file trivy.list
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/security_scan/apt_get_packages
 
