Add installation of ZMQ to Bazel Tests.

--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -25,9 +25,9 @@ jobs:
             rm "$BAZEL_PACKAGE_FILE" && \
             sudo apt-get -y clean && \
             sudo apt-get -y autoremove
-    - name: Install JDK
+    - name: Install JDK and ZMQ
       run: |
-        sudo apt-get install -y openjdk-11-jdk
+        sudo apt-get install -y openjdk-11-jdk libzmq3-dev
         sudo apt-get -y clean && \
         sudo apt-get -y autoremove
     - name: Test
