--- a/exaudfclient/base/javacontainer/test/BUILD
+++ b/exaudfclient/base/javacontainer/test/BUILD
@@ -9,3 +9,14 @@ java_test(
     size = "small",
     deps = [":ExaStackTraceCleaner"]
 )
+
+
+cc_test(
+    name = "javacontainer-test",
+    srcs = ["cpp/javacontainer_test.cc", "cpp/exaudf_wrapper.cc", "cpp/javavm_test.cc", "cpp/javavm_test.h"],
+    deps = [
+        "//javacontainer:javacontainer",
+        "@googletest//:gtest_main",
+    ],
+    data = ["test.jar"]
+)
