--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
@@ -5,7 +5,7 @@ COPY language_deps/packages/apt_get_packages /build_info/packages/language_deps
 
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/language_deps/apt_get_packages --with-versions
 
-RUN /scripts/install_scripts/install_python3.8_pip.sh
+RUN /scripts/install_scripts/install_python3.8_pip.sh "pip == 21.3.1"
 
 COPY language_deps/packages/python3_pip_packages /build_info/packages/language_deps
 RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/language_deps/python3_pip_packages --python-binary python3 --with-versions
