--- a/flavors/python-3.7-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.7-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -1,1 +1,2 @@
-CVE-2021-43816 #bug in trivy, no idea when a new debian package will be released (https://github.com/aquasecurity/trivy/issues/1680)
+#bug in trivy, no idea when a new debian package will be released (https://github.com/aquasecurity/trivy/issues/1680)
+CVE-2021-43816
