Reverted changes in datascience flavor (as it will be removed)

--- a/flavors/python-3.6-data-science-EXASOL-6.2.0/flavor_customization/Dockerfile
+++ b/flavors/python-3.6-data-science-EXASOL-6.2.0/flavor_customization/Dockerfile
@@ -20,7 +20,7 @@ COPY flavor_customization/packages/apt_get_packages /build_info/packages/flavor_
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/flavor_customization/apt_get_packages --with-versions
 
 COPY flavor_customization/packages/python3_pip_packages /build_info/packages/flavor_customization
-RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary python3 --with-versions --allow-no-version --ignore-installed
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary python3 --with-versions --allow-no-version  --use-deprecated-legacy-resolver --ignore-installed
 
 
 ##########################################################################
