--- a/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_customization/Dockerfile
+++ b/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_customization/Dockerfile
@@ -20,6 +20,7 @@ COPY flavor_customization/packages/apt_get_packages /build_info/packages/flavor_
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/flavor_customization/apt_get_packages --with-versions
 
 COPY flavor_customization/packages/python3_pip_packages /build_info/packages/flavor_customization
+#install Python3 packages via pip with legacy dependency resolver, as customers might already use this container with their own (pinned) dependencies which won't work without this option (the new resolver is more restrictive)
 RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary python3 --with-versions --allow-no-version --use-deprecated-legacy-resolver
 
 
