--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
@@ -8,6 +8,7 @@ RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/lang
 RUN /scripts/install_scripts/install_python3.6_pip.sh
 
 COPY language_deps/packages/python3_pip_packages /build_info/packages/language_deps
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/language_deps/python3_pip_packages --python-binary python3 --allow-no-version-for-urls --with-versions
 
 ENV PYTHON3_PREFIX /usr
 ENV PYTHON3_VERSION python3.6
