Refactoring/491 cleanup datascience flavors (#267)

--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/flavor_base_deps/Dockerfile
@@ -5,5 +5,4 @@ COPY flavor_base_deps/packages /build_info/packages/flavor_base_deps
 
 RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/flavor_base_deps/apt_get_packages --with-versions
 
-# Need to run with --allow-no-version, as many packages datascience package are not pinned
-RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_base_deps/python3_pip_packages --python-binary python3 --with-versions --allow-no-version  --use-deprecated-legacy-resolver --ignore-installed
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_base_deps/python3_pip_packages --python-binary python3 --with-versions --use-deprecated-legacy-resolver
