--- a/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
+++ b/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/security_scan/.trivyignore
@@ -1,2 +1,6 @@
 #bug in trivy, no idea when a new debian package will be released (https://github.com/aquasecurity/trivy/issues/1680)
 CVE-2021-43816
+#CVE-2022-0847, CVE-2022-0001, CVE-2022-0002 affect kernel, no issue for container
+CVE-2022-0847
+CVE-2022-0001
+CVE-2022-0002
