--- a/aws-code-build/run_local/run_local.env
+++ b/aws-code-build/run_local/run_local.env
@@ -1,1 +1,5 @@
-_FLAVOR=python-3.8-minimal-EXASOL-6.2.0
+FLAVOR=python-3.8-minimal-EXASOL-6.2.0
+CODEBUILD_SOURCE_VERSION=4018a9005ed8b83ebf7bb75b7507be9316972a32
+CODEBUILD_WEBHOOK_HEAD_REF=refs/heads/refactoring/502_move_ci_to_AWS_Code_Build
+BUILD_DOCKER_REPOSITORY="exatk/script-languages-build-cache"
+RELEASE_DOCKER_REPOSITORY="exasol/script-language-container"
