--- a/aws-code-build/buildspec.yaml
+++ b/aws-code-build/buildspec.yaml
@@ -3,38 +3,39 @@ version: 0.2
 batch:
   fast-fail: false
   build-graph:
+    - identifier: build_python_36_minimal_EXASOL_620
+      env:
+        variables:
+          FLAVOR: python-3.6-minimal-EXASOL-6.2.0
+          BUILD_DOCKER_REPOSITORY: exatk/script-languages-build-cache
+          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
+      buildspec: aws-code-build/ci/build_buildspec.yaml
+      privileged-mode: true
+      type: BUILD_GENERAL1_MEDIUM
+    - identifier: build_python_36_data_science_cuda_EXASOL_620
+      env:
+        variables:
+          FLAVOR: python-3.6-data-science-cuda-EXASOL-6.2.0
+          BUILD_DOCKER_REPOSITORY: exatk/script-languages-build-cache
+          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
+      buildspec: aws-code-build/ci/build_buildspec.yaml
+      privileged-mode: true
+      type: BUILD_GENERAL1_MEDIUM
     - identifier: build_python_38_minimal_EXASOL_620
       env:
         variables:
-          _FLAVOR: python-3.8-minimal-EXASOL-6.2.0
+          FLAVOR: python-3.8-minimal-EXASOL-6.2.0
+          BUILD_DOCKER_REPOSITORY: exatk/script-languages-build-cache
+          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
       buildspec: aws-code-build/ci/build_buildspec.yaml
       privileged-mode: true
       type: BUILD_GENERAL1_MEDIUM
-    - identifier: test_python_38_minimal_EXASOL_620
-      env:
-        variables:
-          _FLAVOR: python-3.8-minimal-EXASOL-6.2.0
-      buildspec: aws-code-build/ci/test_buildspec.yaml
-      privileged-mode: true
-      type: BUILD_GENERAL1_MEDIUM
-      depend-on:
-        - build_python_38_minimal_EXASOL_620
-
     - identifier: build_python_37_minimal_EXASOL_620
       env:
         variables:
-          _FLAVOR: python-3.7-minimal-EXASOL-6.2.0
+          FLAVOR: python-3.7-minimal-EXASOL-6.2.0
+          BUILD_DOCKER_REPOSITORY: exatk/script-languages-build-cache
+          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
       buildspec: aws-code-build/ci/build_buildspec.yaml
       privileged-mode: true
       type: BUILD_GENERAL1_MEDIUM
-    - identifier: test_python_37_minimal_EXASOL_620
-      env:
-        variables:
-          _FLAVOR: python-3.7-minimal-EXASOL-6.2.0
-      buildspec: aws-code-build/ci/test_buildspec.yaml
-      privileged-mode: true
-      type: BUILD_GENERAL1_MEDIUM
-      depend-on:
-        - build_python_37_minimal_EXASOL_620
-
-
