--- a/aws-code-build/ci/build_buildspec.yaml
+++ b/aws-code-build/ci/build_buildspec.yaml
@@ -2,9 +2,6 @@ version: 0.2
 
 env:
   shell: bash
-  variables:
-    _BUILD_DOCKER_REPOSITORY: "exatk/script-languages-build-cache"
-    _REBUILD: True
   secrets-manager:
     DOCKER_USER: "Dockerhub:User"
     DOCKER_PASSWORD: "Dockerhub:AccessToken"
@@ -17,17 +14,16 @@ phases:
       - git submodule update --init --recursive
       - pip3 install --upgrade pip
       - pip3 install https://github.com/exasol/script-languages-container-tool/releases/download/0.9.0/exasol_script_languages_container_tool-0.9.0-py3-none-any.whl
-#  pre_build:
-#    commands:
 
-pre_build:
-    commands:
-      - echo CODEBUILD_SOURCE_VERSION: $CODEBUILD_SOURCE_VERSION
-      - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USER" --password-stdin
-#      - bash aws-code-build/scripts/build_or_pull_build_container.sh $_BUILD_DOCKER_REPOSITORY $_DOCKER_USER
-build:
-    commands:
-      - bash aws-code-build/ci/scripts/build.sh $_FLAVOR $_REBUILD "$_BUILD_DOCKER_REPOSITORY" "$CODEBUILD_SOURCE_VERSION" "" "" "$DOCKER_USER"
+  pre_build:
+      commands:
+        - echo CODEBUILD_SOURCE_VERSION is $CODEBUILD_SOURCE_VERSION #supposed to be the SHA
+        - echo CODEBUILD_WEBHOOK_HEAD_REF is $CODEBUILD_WEBHOOK_HEAD_REF #supposed to the branch name
+        - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USER" --password-stdin
+  #      - bash aws-code-build/scripts/build_or_pull_build_container.sh $_BUILD_DOCKER_REPOSITORY $_DOCKER_USER
+  build:
+      commands:
+        - bash aws-code-build/ci/scripts/run_ci.sh $FLAVOR "$CODEBUILD_WEBHOOK_HEAD_REF" "$DOCKER_USER" "$BUILD_DOCKER_REPOSITORY" "$RELEASE_DOCKER_REPOSITORY" "$CODEBUILD_SOURCE_VERSION"
 
 artifacts:
   files:
