--- a/.github/workflows/check_if_submodules_head_are_ancestors_of_origin_master.yaml
+++ b/.github/workflows/check_if_submodules_head_are_ancestors_of_origin_master.yaml
@@ -1,12 +1,6 @@
 name: Check if submodules heads are ancestors of origin/master
 
-on:
-  push:
-    branches:
-      - "*"
-  pull_request:
-    branches: 
-      - "*"
+on: [push, pull_request]
 
 jobs:
   build:
