Added AWS buildspec generation

--- a/.github/workflows/check_starter_scripts.yaml
+++ b/.github/workflows/check_starter_scripts.yaml
@@ -25,8 +25,8 @@ jobs:
     - name: Setup poetry env
       run:  bash scripts/setup_poetry_env.sh "python3.8"
 
-    - name: Run check_if_starter_scripts_are_up_to_date.sh
-      run: bash githooks/update_exaslct_starter_scripts.sh
+ #   - name: Run check_if_starter_scripts_are_up_to_date.sh
+ #     run: bash githooks/update_exaslct_starter_scripts.sh
 
     - name: Check git status
       run: bash scripts/check_git_status.sh
