--- a/.github/workflows/check_error_codes.yml
+++ b/.github/workflows/check_error_codes.yml
@@ -1,12 +1,6 @@
 name: Check error codes
 
-on:
-  push:
-    branches:
-      - "*"
-  pull_request:
-    branches: 
-      - "*"
+on: [push, pull_request]
 
 jobs:
   build:
