--- a/aws-code-build/ci/build_buildspec.yaml
+++ b/aws-code-build/ci/build_buildspec.yaml
@@ -13,7 +13,7 @@ phases:
     commands:
       - git submodule update --init --recursive
       - pip3 install --upgrade pip
-      - pip3 install https://github.com/exasol/script-languages-container-tool/releases/download/0.9.0/exasol_script_languages_container_tool-0.9.0-py3-none-any.whl
+      - pip3 install "git+https://github.com/exasol/script-languages-container-ci.git@feature/1_add_initial_implementation_of_slc_ci_project"
 
   pre_build:
       commands:
@@ -24,7 +24,7 @@ phases:
   #      - bash aws-code-build/scripts/build_or_pull_build_container.sh $_BUILD_DOCKER_REPOSITORY $_DOCKER_USER
   build:
       commands:
-        - bash aws-code-build/ci/scripts/run_ci.sh $FLAVOR "$CODEBUILD_WEBHOOK_HEAD_REF" "$DOCKER_USER" "$BUILD_DOCKER_REPOSITORY" "$RELEASE_DOCKER_REPOSITORY" "$CODEBUILD_SOURCE_VERSION"
+        - python3 -m script_languages_container_ci.main run_ci --flavor $FLAVOR --branch-name "$CODEBUILD_WEBHOOK_HEAD_REF" --docker-user "$DOCKER_USER" --docker-build-repository "$BUILD_DOCKER_REPOSITORY" --docker-release-repository "$RELEASE_DOCKER_REPOSITORY" --commit-sha "$CODEBUILD_SOURCE_VERSION"
 
 artifacts:
   files:
@@ -33,4 +33,3 @@ artifacts:
   name: build_output_$(date +%Y-%m-%d-%Hh-%Mm-%Ss)
   base-directory: .build_output
   s3-prefix: flavor_$FLAVOR
-
