--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -7,35 +7,27 @@ batch:
       env:
         variables:
           FLAVOR: python-3.6-minimal-EXASOL-6.2.0
-          BUILD_DOCKER_REPOSITORY: thomasuben/script-languages-build-cache
-          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
-      buildspec: aws-code-build/ci/build_buildspec.yaml
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
       privileged-mode: true
       type: BUILD_GENERAL1_MEDIUM
     - identifier: build_python_36_data_science_cuda_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.6-data-science-cuda-EXASOL-6.2.0
-          BUILD_DOCKER_REPOSITORY: thomasuben/script-languages-build-cache
-          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
-      buildspec: aws-code-build/ci/build_buildspec.yaml
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
       privileged-mode: true
       type: BUILD_GENERAL1_MEDIUM
     - identifier: build_python_38_minimal_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.8-minimal-EXASOL-6.2.0
-          BUILD_DOCKER_REPOSITORY: thomasuben/script-languages-build-cache
-          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
-      buildspec: aws-code-build/ci/build_buildspec.yaml
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
       privileged-mode: true
       type: BUILD_GENERAL1_MEDIUM
     - identifier: build_python_37_minimal_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.7-minimal-EXASOL-6.2.0
-          BUILD_DOCKER_REPOSITORY: thomasuben/script-languages-build-cache
-          RELEASE_DOCKER_REPOSITORY: exasol/script-language-container
-      buildspec: aws-code-build/ci/build_buildspec.yaml
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
       privileged-mode: true
       type: BUILD_GENERAL1_MEDIUM
