--- a/aws-code-build/build_config.json
+++ b/aws-code-build/build_config.json
@@ -1,5 +1,5 @@
 {"build_ignore":
-  {"ignored_folders":
+  {"ignored_paths":
     ["google-cloud-build", "python_client", ".gitignore", "contributing.md", ".dockerignore", "LICENSE",
       "pyproject.toml", "README.md", "find_duplicate_error_codes.sh", "find_error_codes.sh",
       "find_highest_error_codes_per_module.sh", "find_incomplete_error_codes.sh", "find_next_error_code_per_module.sh",
