--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ keywords = ['exasol', 'udf', 'script-languages']
 python = ">=3.8,<4"
 importlib-resources = ">=5.4.0"
 exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.12.0/exasol_script_languages_container_tool-0.12.0-py3-none-any.whl" }
-exasol-script-languages-container-ci = {git = "https://github.com/exasol/script-languages-container-ci.git", branch="main"}
-exasol-script-languages-container-ci-setup = {git = "https://github.com/exasol/script-languages-container-ci-setup.git", branch="main"}
+exasol-script-languages-container-ci = {git = "https://github.com/exasol/script-languages-container-ci.git", branch="feature/9_implement_run-release_command"}
+#exasol-script-languages-container-ci-setup = {git = "https://github.com/exasol/script-languages-container-ci-setup.git", branch="feature/3_addess_release_code_build_and_command"}
 #exasol-script-languages-container-ci = { path = "/home/thomas/Work/script-languages-container-ci", develop = false}
+exasol-script-languages-container-ci-setup = { path = "/home/thomas/Work/script-languages-container-ci-setup", develop = false}
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
