--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -3,8 +3,8 @@ name: Run a test for the AWS release build + asset upload
 on:
   workflow_dispatch:
     inputs:
-      test_release_tag:
-        description: 'The existing tag for the release test. The Github release for this tag must already exist!'
+      release_title:
+        description: 'The release title for the new release draft!'
         required: true
 
 jobs:
@@ -32,7 +32,7 @@ jobs:
       run:  bash scripts/setup_poetry_env.sh "python3.8"
 
     - name: Start test release
-      run: poetry run python -m exasol_script_languages_container_ci_setup.main start-test-release-build --log-level info --project ScriptLanguages --release-tag ${{ github.event.inputs.test_release_tag }}
+      run: poetry run python -m exasol_script_languages_container_ci_setup.main start-test-release-build --log-level info --project ScriptLanguages --repo-id "$GITHUB_REPOSITORY" --branch "$GITHUB_REF" --release-title ${{ github.event.inputs.release_title }}
       env: # Set the secret as an env variable
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
