--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -80,7 +80,7 @@ cc_binary(
             "//exaudflib:script_data_transfer_objects_wrapper", 
             "//exaudflib:script_data_transfer_objects"
             ],
-    deps = [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+    deps = [ "@zmq//:zmq", "@protobuf//:protobuf"],
     defines = VM_ENABLED_DEFINES
 )
 
@@ -143,7 +143,7 @@ cc_binary(
     srcs = ["exaudfclient.cc", "load_dynamic.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
-          ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+          ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmq", "@protobuf//:protobuf"],
     defines = VM_ENABLED_DEFINES,
     data = [":libexaudflib_complete.so"],
 )
@@ -153,7 +153,7 @@ cc_binary(
     srcs = ["exaudfclient.cc", "load_dynamic.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
-            ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+            ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmq", "@protobuf//:protobuf"],
     defines = VM_ENABLED_DEFINES,
     data = [":libexaudflib_complete.so"],
 )
