--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/build_run/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/build_run/Dockerfile
@@ -1,31 +1,10 @@
-FROM {{language_deps}}
-
-COPY --from={{build_deps}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{build_deps}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{build_deps}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{build_deps}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{build_deps}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{build_deps}} /env /env
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-
-RUN ldconfig
+FROM {{build_deps}}
 
 RUN mkdir /exaudfclient /exaudf
 COPY exaudfclient/base /exaudfclient/base
 
 WORKDIR /exaudfclient/base
-RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary-py3"]
+RUN ./build.sh --config no-tty --config optimize --config python --config fast-binary-py3
 RUN cp -r -L bazel-bin/* /exaudf
 
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
