--- a/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/build_run/Dockerfile
+++ b/flavors/python-3.8-minimal-EXASOL-6.2.0/flavor_base/build_run/Dockerfile
@@ -28,11 +28,11 @@ WORKDIR /exaudfclient/base
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary-py3"]
 RUN cp -r -L bazel-bin/* /exaudf
 
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
+#RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
 
 WORKDIR /exaudf
 
-RUN rm -r /exaudfclient
+#RUN rm -r /exaudfclient
 
 COPY --from={{build_deps}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
