1. Fixed triggers in GH actions 2. Temporarily added release

--- a/.github/workflows/check_error_codes.yml
+++ b/.github/workflows/check_error_codes.yml
@@ -1,6 +1,11 @@
 name: Check error codes
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+
 
 jobs:
   build:
