--- a/.github/workflows/check_markdown_links.yaml
+++ b/.github/workflows/check_markdown_links.yaml
@@ -1,6 +1,11 @@
 name: Check Markdown links
 
-on: push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+
 
 jobs:
   markdown-link-check:
