--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -32,7 +32,7 @@ jobs:
       run:  bash scripts/setup_poetry_env.sh "python3.8"
 
     - name: Start test release
-      run: poetry run python -m exasol_script_languages_container_ci_setup.main start-test-release-build --log-level info --project ScriptLanguages --repo-id "$GITHUB_REPOSITORY" --branch "$GITHUB_REF" --release-title "Test Release"
+      run: poetry run python -m exasol_script_languages_container_ci_setup.main start-test-release-build --log-level info --project ScriptLanguages --repo-name "$GITHUB_REPOSITORY" --branch "$GITHUB_REF" --release-title "Test Release"
       env: # Set the secret as an env variable
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
