Trying to split up swig_common.h

--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -92,7 +92,8 @@ cc_library(
 cc_library(
     name = "exaudflib",
     srcs = ["vm/swig_vm.cc",
-            "swig/swig_common.cc", "swig/swig_meta_data.cc", "swig/swig_result_handler.cc", "swig/swig_table_iterator.cc",
+            "swig/swig_common.cc", "swig/swig_meta_data.cc", "swig/swig_result_handler.cc",
+            "swig/swig_table_iterator.cc",
             "impl/exaudflib_main.cc",
             "impl/msg_conversion.cc", "impl/msg_conversion.h",
             "impl/check.cc", "impl/check.h",
@@ -100,7 +101,7 @@ cc_library(
             "impl/socket_low_level.cc", "impl/socket_low_level.h",
             "impl/global.cc", "impl/global.h",
             "impl/socket_high_level.cc", "impl/socket_high_level.h",
-            "impl/swig/swig_factory.cc",
+            "impl/swig/swig_factory.cc", "impl/swig/swig_parameter.cc", "impl/swig/swig_parameter.h",
             "impl/swig/swig_table_iterator.h", "impl/swig/swig_table_iterator.cc",
             "impl/swig/swig_meta_data.h", "impl/swig/swig_meta_data.cc",
             "impl/swig/swig_result_handler.h", "impl/swig/swig_result_handler.cc",
