--- a/.github/workflows/check_if_submodules_head_are_ancestors_of_origin_master.yaml
+++ b/.github/workflows/check_if_submodules_head_are_ancestors_of_origin_master.yaml
@@ -3,10 +3,9 @@ name: Check if submodules heads are ancestors of origin/master
 on:
   push:
     branches:
-      - "*"
+      - master
   pull_request:
-    branches: 
-      - "*"
+
 
 jobs:
   build:
